[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Martin Sit <46298951+martin226@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
Flask = "^2.1.2"
nltk = "^3.7"
demoji = "^1.1.0"
contractions = "^0.1.72"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
